--- a/f-tep-portal/src/main/resources/app/styles/less/common/navbar.less
+++ b/f-tep-portal/src/main/resources/app/styles/less/common/navbar.less
@@ -58,8 +58,12 @@
                             color: @brand-dark;
                         }
                     }
-                    @media (max-width:800px) {
-                        padding: 0 16px;
+                }
+                @media (max-width:860px) {
+                    font-size: 0.8rem;
+                    padding: 0 16px;
+                    li {
+                        padding: 0 0.5rem;
                     }
                 }
             }
